@@ -15,17 +15,10 @@
  */
 package com.b2international.snowowl.core.internal;
 
-import static com.b2international.index.query.Expressions.dismaxWithScoreCategories;
-import static com.b2international.index.query.Expressions.exactMatch;
-import static com.b2international.index.query.Expressions.matchAny;
-import static com.b2international.index.query.Expressions.matchBooleanPrefix;
-import static com.b2international.index.query.Expressions.matchTextAll;
-import static com.b2international.index.query.Expressions.matchTextAny;
-import static com.b2international.index.query.Expressions.matchTextFuzzy;
-import static com.b2international.index.query.Expressions.matchTextParsed;
-import static com.b2international.index.query.Expressions.regexp;
+import static com.b2international.index.query.Expressions.*;
 
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -37,20 +30,21 @@ import com.b2international.index.mapping.Field;
 import com.b2international.index.mapping.FieldAlias;
 import com.b2international.index.mapping.FieldAlias.FieldAliasType;
 import com.b2international.index.query.Expression;
+import com.b2international.index.revision.RevisionBranchPoint;
 import com.b2international.snowowl.core.ResourceURI;
 import com.b2international.snowowl.core.repository.RevisionDocument;
 import com.b2international.snowowl.core.request.TermFilter;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonSetter;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.fasterxml.jackson.databind.annotation.JsonPOJOBuilder;
-import com.google.common.collect.ImmutableSet;
 
 /**
  * @since 8.0
  */
 @Doc(
-	type = "resource",
+	type = ResourceDocument.TYPE,
 	revisionHash = {
 		ResourceDocument.Fields.URL,
 		ResourceDocument.Fields.TITLE,
@@ -67,6 +61,8 @@ import com.google.common.collect.ImmutableSet;
 @JsonDeserialize(builder = ResourceDocument.Builder.class)
 public final class ResourceDocument extends RevisionDocument {
 
+	public static final String TYPE = "resource";
+	
 	/**
 	 * @since 8.0
 	 */
@@ -84,6 +80,7 @@ public final class ResourceDocument extends RevisionDocument {
 		public static final String CONTACT = "contact";
 		public static final String USAGE = "usage";
 		public static final String PURPOSE = "purpose";
+		public static final String CREATED_AT = "createdAt";
 		public static final String BUNDLE_ID = "bundleId";
 		
 		// specialized resource fields
@@ -99,7 +96,23 @@ public final class ResourceDocument extends RevisionDocument {
 		private static final String TITLE_EXACT    = TITLE + ".exact";
 		private static final String TITLE_TEXT     = TITLE + ".text";
 		
-		public static final Set<String> SORT_FIELDS = ImmutableSet.of(RESOURCE_TYPE, TITLE, LANGUAGE, STATUS, OWNER, USAGE);
+		public static final Set<String> SORT_FIELDS = Set.of(
+			RESOURCE_TYPE,
+			ID,
+			URL,
+			TITLE, 
+			LANGUAGE, 
+			STATUS, 
+			OWNER, 
+			USAGE,
+			CREATED_AT,
+			BUNDLE_ID,
+			OID,
+			BRANCH_PATH, 
+			TOOLING_ID,
+			EXTENSION_OF, 
+			UPGRADE_OF
+		);
 	}
 	
 	/**
@@ -194,6 +207,14 @@ public final class ResourceDocument extends RevisionDocument {
 		public static Expression oids(Iterable<String> oids) {
 			return matchAny(Fields.OID, oids);
 		}
+
+		public static Expression status(String status) {
+			return exactMatch(Fields.STATUS, status);
+		}
+
+		public static Expression statuses(Iterable<String> status) {
+			return matchAny(Fields.STATUS, status);
+		}
 		
 		public static Expression extensionOf(Iterable<ResourceURI> extensionOfs) {
 			return matchAny(Fields.EXTENSION_OF, Collections3.toImmutableSet(extensionOfs).stream().map(ResourceURI::toString).collect(Collectors.toSet()));
@@ -204,7 +225,7 @@ public final class ResourceDocument extends RevisionDocument {
 		}
 		
 	}
-	
+
 	public static Builder builder() {
 		return new Builder();
 	}
@@ -233,6 +254,9 @@ public final class ResourceDocument extends RevisionDocument {
 				.settings(from.getSettings());
 	}
 	
+	/**
+	 * @since 8.0
+	 */
 	@JsonPOJOBuilder(withPrefix = "")
 	public static final class Builder extends RevisionDocument.RevisionDocumentBuilder<Builder, RevisionDocument> {
 		
@@ -257,6 +281,9 @@ public final class ResourceDocument extends RevisionDocument {
 		private ResourceURI extensionOf;
 		private ResourceURI upgradeOf;
 		private Map<String, Object> settings;
+		
+		// derived fields, access only
+		private Long createdAt;
 		
 		@JsonCreator
 		private Builder() {
@@ -352,6 +379,12 @@ public final class ResourceDocument extends RevisionDocument {
 			return getSelf();
 		}
 		
+		@JsonSetter
+		Builder createdAt(Long createdAt) {
+			this.createdAt = createdAt;
+			return getSelf();
+		}
+		
 		@Override
 		protected Builder getSelf() {
 			return this;
@@ -379,7 +412,8 @@ public final class ResourceDocument extends RevisionDocument {
 				toolingId,
 				extensionOf,
 				upgradeOf,
-				settings
+				settings,
+				createdAt
 			);
 		}
 		
@@ -414,6 +448,12 @@ public final class ResourceDocument extends RevisionDocument {
 	private final ResourceURI upgradeOf;
 	private final Map<String, Object> settings;
 	
+	// derived fields, getters only, mapping generation requires a field to be specified
+	private final Long createdAt;
+	
+	// mapping only field, no actual purpose or use, required to support multi-index search with doc type VersionDocument
+	private String version;
+	
 	public ResourceDocument(
 			final String id, 
 			final String iconId, 
@@ -434,7 +474,8 @@ public final class ResourceDocument extends RevisionDocument {
 			final String toolingId,
 			final ResourceURI extensionOf,
 			final ResourceURI upgradeOf,
-			final Map<String, Object> settings) {
+			final Map<String, Object> settings,
+			final Long createdAt) {
 		super(id, iconId);
 		this.resourceType = resourceType;
 		this.url = url;
@@ -454,6 +495,7 @@ public final class ResourceDocument extends RevisionDocument {
 		this.extensionOf = extensionOf;
 		this.upgradeOf = upgradeOf;
 		this.settings = settings;
+		this.createdAt = createdAt;
 	}
 
 	@JsonIgnore
@@ -532,5 +574,11 @@ public final class ResourceDocument extends RevisionDocument {
 	public Map<String, Object> getSettings() {
 		return settings;
 	}
-
+	
+	public Long getCreatedAt() {
+		return Optional.ofNullable(createdAt)
+				.or(() -> Optional.ofNullable(getCreated()).map(RevisionBranchPoint::getTimestamp))
+				.orElse(null);
+	}
+	
 }
