@@ -24,6 +24,7 @@ import static com.b2international.snowowl.snomed.datastore.index.entry.SnomedCon
 import static com.b2international.snowowl.snomed.datastore.index.entry.SnomedConceptDocument.Expressions.statedAncestors;
 import static com.b2international.snowowl.snomed.datastore.index.entry.SnomedConceptDocument.Expressions.statedParents;
 import static com.b2international.snowowl.test.commons.snomed.DocumentBuilders.*;
+import static com.b2international.snowowl.test.commons.snomed.RandomSnomedIdentiferGenerator.generateDescriptionId;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.fail;
@@ -31,6 +32,8 @@ import static org.junit.Assume.assumeFalse;
 
 import java.math.BigDecimal;
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import org.eclipse.xtext.parser.IParser;
 import org.eclipse.xtext.serializer.ISerializer;
@@ -53,6 +56,8 @@ import com.b2international.index.revision.RevisionIndex;
 import com.b2international.index.revision.StagingArea;
 import com.b2international.snomed.ecl.EclStandaloneSetup;
 import com.b2international.snowowl.core.api.SnowowlRuntimeException;
+import com.b2international.snowowl.core.date.DateFormats;
+import com.b2international.snowowl.core.date.EffectiveTimes;
 import com.b2international.snowowl.core.domain.BranchContext;
 import com.b2international.snowowl.core.domain.IComponent;
 import com.b2international.snowowl.core.repository.RevisionDocument;
@@ -60,16 +65,12 @@ import com.b2international.snowowl.core.request.RevisionIndexReadRequest;
 import com.b2international.snowowl.snomed.common.SnomedConstants.Concepts;
 import com.b2international.snowowl.snomed.core.tree.Trees;
 import com.b2international.snowowl.snomed.datastore.config.SnomedCoreConfiguration;
-import com.b2international.snowowl.snomed.datastore.index.entry.SnomedConceptDocument;
-import com.b2international.snowowl.snomed.datastore.index.entry.SnomedDescriptionIndexEntry;
-import com.b2international.snowowl.snomed.datastore.index.entry.SnomedRefSetMemberIndexEntry;
-import com.b2international.snowowl.snomed.datastore.index.entry.SnomedRelationshipIndexEntry;
+import com.b2international.snowowl.snomed.datastore.index.entry.*;
 import com.b2international.snowowl.snomed.datastore.request.SnomedRequests;
 import com.b2international.snowowl.test.commons.snomed.RandomSnomedIdentiferGenerator;
 import com.b2international.snowowl.test.commons.snomed.TestBranchContext;
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableSet;
 import com.google.inject.Injector;
 
 /**
@@ -118,7 +119,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 	
 	@Override
 	protected Collection<Class<?>> getTypes() {
-		return ImmutableSet.of(SnomedConceptDocument.class, SnomedDescriptionIndexEntry.class, SnomedRelationshipIndexEntry.class, SnomedRefSetMemberIndexEntry.class);
+		return Set.of(SnomedConceptDocument.class, SnomedDescriptionIndexEntry.class, SnomedRelationshipIndexEntry.class, SnomedRefSetMemberIndexEntry.class);
 	}
 	
 	private BranchContext context;
@@ -167,11 +168,6 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 				.build();
 	}
 	
-	@Test(expected = BadRequestException.class)
-	public void syntaxErrorsShouldThrowException() throws Exception {
-		eval("invalid");
-	}
-	
 	private Expression eval(String expression) {
 		return new RevisionIndexReadRequest<>(SnomedRequests.prepareEclEvaluation(expression)
 				.setExpressionForm(isInferred() ? Trees.INFERRED_FORM : Trees.STATED_FORM) // use the isInferred method decide on inferred vs stated form (this will provide support for axioms as well)
@@ -179,12 +175,16 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 				.execute(context)
 				.getSync();		
 	}
-	
+
+	@Test(expected = BadRequestException.class)
+	public void syntaxError() throws Exception {
+		eval("invalid");
+	}
+
 	@Test(expected = BadRequestException.class)
 	public void _null() throws Exception {
 		eval(null);
 	}
-	
 
 	@Test
 	public void empty() throws Exception {
@@ -364,7 +364,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 				.statedParents(Long.parseLong(Concepts.MODULE_ROOT))
 				.build());
 		final Expression actual = eval(">"+Concepts.MODULE_SCT_CORE);
-		final Expression expected = ids(ImmutableSet.of(Concepts.ROOT_CONCEPT, Concepts.MODULE_ROOT));
+		final Expression expected = ids(Set.of(Concepts.ROOT_CONCEPT, Concepts.MODULE_ROOT));
 		assertEquals(expected, actual);
 	}
 	
@@ -378,7 +378,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 				.statedParents(Long.parseLong(Concepts.MODULE_ROOT))
 				.build());
 		final Expression actual = eval(">>"+Concepts.MODULE_SCT_CORE);
-		final Expression expected = ids(ImmutableSet.of(Concepts.ROOT_CONCEPT, Concepts.MODULE_ROOT, Concepts.MODULE_SCT_CORE));
+		final Expression expected = ids(Set.of(Concepts.ROOT_CONCEPT, Concepts.MODULE_ROOT, Concepts.MODULE_SCT_CORE));
 		assertEquals(expected, actual);
 	}
 	
@@ -399,7 +399,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 	@Test
 	public void selfOrOther() throws Exception {
 		final Expression actual = eval(ROOT_ID + " OR " + OTHER_ID);
-		final Expression expected = ids(ImmutableSet.of(ROOT_ID, OTHER_ID));
+		final Expression expected = ids(Set.of(ROOT_ID, OTHER_ID));
 		assertEquals(expected, actual);
 	}
 	
@@ -425,6 +425,14 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		assertNotNull(actual);
 	}
 	
+	@Test
+	public void largeIdSetWithOrOperators() throws Exception {
+		eval(IntStream.range(0, 10_000)
+			.mapToObj(i -> RandomSnomedIdentiferGenerator.generateConceptId())
+			.collect(Collectors.joining(" OR ")));
+	}
+
+	
 	@Test(expected = BadRequestException.class)
 	public void binaryOperatorAmbiguityOrAnd() throws Exception {
 		eval(String.format("%s OR %s AND %s", ROOT_ID, ROOT_ID, ROOT_ID));
@@ -435,13 +443,23 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		eval(String.format("%s AND %s OR %s", ROOT_ID, ROOT_ID, ROOT_ID));
 	}
 	
+	@Test(expected = BadRequestException.class)
+	public void ambiguousOrOperatorInRefinement() throws Exception {
+		eval("(<64572001 |Disease (disorder)|: 363698007 |Finding site| = 74281007 |Myocardium structure| OR 404684003 |Clinical finding|)");
+	}
+
+	@Test
+	public void ambiguousOrOperatorInConstraint() throws Exception {
+		eval("(404684003 |Clinical finding (finding)| OR <64572001 |Disease (disorder)|: 363698007 |Finding site| = 74281007 |Myocardium structure|)");
+	}
+	
 	@Test
 	public void refinementAttributeEquals() throws Exception {
 		generateDrugHierarchy();
 		final Expression actual = eval(String.format("<%s:%s=%s", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, INGREDIENT1));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(PANADOL_TABLET, TRIPHASIL_TABLET))
+			ids(Set.of(PANADOL_TABLET, TRIPHASIL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -456,7 +474,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s:(%s OR %s)=(%s OR %s)", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, HAS_BOSS, INGREDIENT1, INGREDIENT2));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(PANADOL_TABLET, TRIPHASIL_TABLET))
+			ids(Set.of(PANADOL_TABLET, TRIPHASIL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -501,7 +519,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: R %s=%s", SUBSTANCE, HAS_ACTIVE_INGREDIENT, TRIPHASIL_TABLET));
 		final Expression expected = and(
 			descendantsOf(SUBSTANCE),
-			ids(ImmutableSet.of(INGREDIENT1, INGREDIENT2))
+			ids(Set.of(INGREDIENT1, INGREDIENT2))
 		);
 		assertEquals(expected, actual);
 	}
@@ -513,7 +531,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: R *=%s", SUBSTANCE, TRIPHASIL_TABLET));
 		final Expression expected = and(
 			descendantsOf(SUBSTANCE),
-			ids(ImmutableSet.of(INGREDIENT1, INGREDIENT2))
+			ids(Set.of(INGREDIENT1, INGREDIENT2))
 		);
 		assertEquals(expected, actual);
 	}
@@ -525,7 +543,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: R %s=*", SUBSTANCE, HAS_ACTIVE_INGREDIENT));
 		final Expression expected = and(
 			descendantsOf(SUBSTANCE),
-			ids(ImmutableSet.of(INGREDIENT1, INGREDIENT2))
+			ids(Set.of(INGREDIENT1, INGREDIENT2))
 		);
 		assertEquals(expected, actual);
 	}
@@ -537,7 +555,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s=<%s", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(TRIPHASIL_TABLET, PANADOL_TABLET))
+			ids(Set.of(TRIPHASIL_TABLET, PANADOL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -561,7 +579,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [1..*] %s=<%s", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(TRIPHASIL_TABLET, PANADOL_TABLET))
+			ids(Set.of(TRIPHASIL_TABLET, PANADOL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -573,7 +591,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [0..0] %s=<%s", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected =	Expressions.builder()
 				.filter(descendantsOf(DRUG_ROOT))
-				.mustNot(ids(ImmutableSet.of(TRIPHASIL_TABLET, PANADOL_TABLET)))
+				.mustNot(ids(Set.of(TRIPHASIL_TABLET, PANADOL_TABLET)))
 				.build();
 		assertEquals(expected, actual);
 	}
@@ -592,13 +610,13 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 				HAS_ACTIVE_INGREDIENT, DRUG_WITH_INVALID_HAI, 0
 			).build());
 		} else {
-			indexRevision(MAIN, relationship(DRUG_WITH_INVALID_HAI, HAS_ACTIVE_INGREDIENT, DRUG_WITH_INVALID_HAI, getCharacteristicType()).group(0).build());
+			indexRevision(MAIN, relationship(DRUG_WITH_INVALID_HAI, HAS_ACTIVE_INGREDIENT, DRUG_WITH_INVALID_HAI, getCharacteristicType()).relationshipGroup(0).build());
 		}
 		
 		final Expression actual = eval(String.format("<%s: [0..0] %s != <%s", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected =	Expressions.builder()
 				.filter(descendantsOf(DRUG_ROOT))
-				.mustNot(ids(ImmutableSet.of(DRUG_WITH_INVALID_HAI)))
+				.mustNot(ids(Set.of(DRUG_WITH_INVALID_HAI)))
 				.build();
 		assertEquals(expected, actual);
 	}
@@ -610,7 +628,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [0..0] %s != %s", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, INGREDIENT1));
 		final Expression expected =	Expressions.builder()
 				.filter(descendantsOf(DRUG_ROOT))
-				.mustNot(ids(ImmutableSet.of(TRIPHASIL_TABLET)))
+				.mustNot(ids(Set.of(TRIPHASIL_TABLET)))
 				.build();
 		assertEquals(expected, actual);
 	}
@@ -622,7 +640,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [0..1] %s=<%s", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected =	Expressions.builder()
 				.filter(descendantsOf(DRUG_ROOT))
-				.mustNot(ids(ImmutableSet.of(TRIPHASIL_TABLET)))
+				.mustNot(ids(Set.of(TRIPHASIL_TABLET)))
 				.build();
 		assertEquals(expected, actual);
 	}
@@ -646,7 +664,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [1..2] %s=<%s", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(TRIPHASIL_TABLET, PANADOL_TABLET))
+			ids(Set.of(TRIPHASIL_TABLET, PANADOL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -658,11 +676,11 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression expected = and(
 			and(
 				descendantsOf(DRUG_ROOT),
-				ids(ImmutableSet.of(PANADOL_TABLET, TRIPHASIL_TABLET))
+				ids(Set.of(PANADOL_TABLET, TRIPHASIL_TABLET))
 			),
 			and(
 				descendantsOf(DRUG_ROOT),
-				ids(ImmutableSet.of(TRIPHASIL_TABLET))
+				ids(Set.of(TRIPHASIL_TABLET))
 			)
 		);
 		assertEquals(expected, actual);
@@ -676,11 +694,11 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression expected = Expressions.builder()
 				.should(and(
 					descendantsOf(DRUG_ROOT),
-					ids(ImmutableSet.of(TRIPHASIL_TABLET))
+					ids(Set.of(TRIPHASIL_TABLET))
 				))
 				.should(and(
 					descendantsOf(DRUG_ROOT),
-					ids(ImmutableSet.of(TISSEL_KIT)))
+					ids(Set.of(TISSEL_KIT)))
 				)
 				.build();
 		assertEquals(expected, actual);
@@ -694,16 +712,16 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression expected = Expressions.builder()
 				.should(and(
 					descendantsOf(DRUG_ROOT),
-					ids(ImmutableSet.of(TRIPHASIL_TABLET))
+					ids(Set.of(TRIPHASIL_TABLET))
 				))
 				.should(and(
 					and(
 						descendantsOf(DRUG_ROOT),
-						ids(ImmutableSet.of(TISSEL_KIT))
+						ids(Set.of(TISSEL_KIT))
 					),
 					and(
 						descendantsOf(DRUG_ROOT),
-						ids(ImmutableSet.of(TRIPHASIL_TABLET))
+						ids(Set.of(TRIPHASIL_TABLET))
 					)
 				))
 				.build();
@@ -734,7 +752,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		generateDrugHierarchy();
 		
 		final Expression actual = eval(String.format("%s.%s", PANADOL_TABLET, HAS_ACTIVE_INGREDIENT));
-		final Expression expected = ids(ImmutableSet.of(INGREDIENT1));
+		final Expression expected = ids(Set.of(INGREDIENT1));
 		assertEquals(expected, actual);
 	}
 	
@@ -743,7 +761,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		generateDrugHierarchy();
 		
 		final Expression actual = eval(String.format("<%s.%s", DRUG_ROOT, HAS_ACTIVE_INGREDIENT));
-		final Expression expected = ids(ImmutableSet.of(INGREDIENT1, INGREDIENT2));
+		final Expression expected = ids(Set.of(INGREDIENT1, INGREDIENT2));
 		assertEquals(expected, actual);
 	}
 	
@@ -752,7 +770,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		generateDrugHierarchy();
 		
 		final Expression actual = eval(String.format("(<%s MINUS %s).%s", DRUG_ROOT, TRIPHASIL_TABLET, HAS_ACTIVE_INGREDIENT));
-		final Expression expected = ids(ImmutableSet.of(INGREDIENT1));
+		final Expression expected = ids(Set.of(INGREDIENT1));
 		assertEquals(expected, actual);
 	}
 	
@@ -763,7 +781,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: {%s=<%s}", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ASPIRIN_TABLET, ALGOFLEX_TABLET, TRIPLEX_TABLET))
+			ids(Set.of(ASPIRIN_TABLET, ALGOFLEX_TABLET, TRIPLEX_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -775,7 +793,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [2..2] {%s=<%s}", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ALGOFLEX_TABLET))
+			ids(Set.of(ALGOFLEX_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -796,7 +814,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [0..0] {%s=<%s}", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = Expressions.builder()
 				.filter(descendantsOf(DRUG_ROOT))
-				.mustNot(ids(ImmutableSet.of(ASPIRIN_TABLET, ALGOFLEX_TABLET, TRIPLEX_TABLET)))
+				.mustNot(ids(Set.of(ASPIRIN_TABLET, ALGOFLEX_TABLET, TRIPLEX_TABLET)))
 				.build();
 		assertEquals(expected, actual);
 	}
@@ -808,7 +826,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [0..1] {%s=<%s}", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = Expressions.builder()
 				.filter(descendantsOf(DRUG_ROOT))
-				.mustNot(ids(ImmutableSet.of(ALGOFLEX_TABLET)))
+				.mustNot(ids(Set.of(ALGOFLEX_TABLET)))
 				.build();
 		assertEquals(expected, actual);
 	}
@@ -820,7 +838,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [1..1] {%s=<%s,%s=<%s}", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE, HAS_BOSS, SUBSTANCE));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ASPIRIN_TABLET))
+			ids(Set.of(ASPIRIN_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -838,7 +856,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		
 		final Expression expected = and(
 			descendantsOrSelfOf,
-			ids(ImmutableSet.of(ABACAVIR_TABLET, PANADOL_TABLET))
+			ids(Set.of(ABACAVIR_TABLET, PANADOL_TABLET))
 		);
 		
 		assertEquals(expected, actual);
@@ -851,7 +869,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: {[1..1] %s=<%s,[1..1] %s=<%s}", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE, HAS_BOSS, SUBSTANCE));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ASPIRIN_TABLET, ALGOFLEX_TABLET))
+			ids(Set.of(ASPIRIN_TABLET, ALGOFLEX_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -863,7 +881,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [1..1] {%s=%s OR %s=%s}", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, INGREDIENT5, HAS_BOSS, INGREDIENT5));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ASPIRIN_TABLET, TRIPLEX_TABLET))
+			ids(Set.of(ASPIRIN_TABLET, TRIPLEX_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -875,7 +893,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [1..1] {(%s=%s AND %s=%s) OR %s=%s}", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, INGREDIENT5, HAS_BOSS, INGREDIENT6, HAS_ACTIVE_INGREDIENT, INGREDIENT6));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ASPIRIN_TABLET))
+			ids(Set.of(ASPIRIN_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -890,7 +908,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s = true", DRUG_ROOT, MANUFACTURED));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(PANADOL_TABLET, TRIPHASIL_TABLET))
+			ids(Set.of(PANADOL_TABLET, TRIPHASIL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -905,7 +923,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s != true", DRUG_ROOT, MANUFACTURED));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(AMOXICILLIN_TABLET))
+			ids(Set.of(AMOXICILLIN_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -917,7 +935,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s = 'PANADOL'", DRUG_ROOT, HAS_TRADE_NAME));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(PANADOL_TABLET))
+			ids(Set.of(PANADOL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -927,7 +945,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		generateDrugHierarchy();
 		
 		final Expression actual = eval(String.format("*: %s = 'PANADOL'", HAS_TRADE_NAME));
-		final Expression expected = ids(ImmutableSet.of(PANADOL_TABLET));
+		final Expression expected = ids(Set.of(PANADOL_TABLET));
 		assertEquals(expected, actual);
 	}
 	
@@ -938,7 +956,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s != 'PANADOL'", DRUG_ROOT, HAS_TRADE_NAME));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT), 
-			ids(ImmutableSet.of(TRIPHASIL_TABLET, AMOXICILLIN_TABLET))
+			ids(Set.of(TRIPHASIL_TABLET, AMOXICILLIN_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -948,7 +966,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		generateDrugHierarchy();
 		
 		final Expression actual = eval(String.format("*: %s != 'PANADOL'", HAS_TRADE_NAME));
-		final Expression expected = ids(ImmutableSet.of(TRIPHASIL_TABLET, AMOXICILLIN_TABLET));
+		final Expression expected = ids(Set.of(TRIPHASIL_TABLET, AMOXICILLIN_TABLET));
 		assertEquals(expected, actual);
 	}
 	
@@ -958,7 +976,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s = #500", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(PANADOL_TABLET))
+			ids(Set.of(PANADOL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -969,7 +987,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s = #-500", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(TRIPHASIL_TABLET))
+			ids(Set.of(TRIPHASIL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -980,7 +998,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s != #500", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(TRIPHASIL_TABLET))
+			ids(Set.of(TRIPHASIL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -991,7 +1009,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s = #5.5", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(AMOXICILLIN_TABLET))
+			ids(Set.of(AMOXICILLIN_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1002,7 +1020,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s = #-5.5", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ABACAVIR_TABLET))
+			ids(Set.of(ABACAVIR_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1013,7 +1031,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s != #5.5", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ABACAVIR_TABLET))
+			ids(Set.of(ABACAVIR_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1025,7 +1043,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s < #1", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(TRIPHASIL_TABLET))
+			ids(Set.of(TRIPHASIL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1037,7 +1055,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s < #1.0", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ABACAVIR_TABLET))
+			ids(Set.of(ABACAVIR_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1049,7 +1067,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s <= #1", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(TRIPHASIL_TABLET, DRUG_1_MG))
+			ids(Set.of(TRIPHASIL_TABLET, DRUG_1_MG))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1061,7 +1079,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s <= #1.0", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ABACAVIR_TABLET, DRUG_1D_MG))
+			ids(Set.of(ABACAVIR_TABLET, DRUG_1D_MG))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1073,7 +1091,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s > #1", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(PANADOL_TABLET))
+			ids(Set.of(PANADOL_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1085,7 +1103,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s > #1.0", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(AMOXICILLIN_TABLET))
+			ids(Set.of(AMOXICILLIN_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1097,7 +1115,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s >= #1", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(PANADOL_TABLET, DRUG_1_MG))
+			ids(Set.of(PANADOL_TABLET, DRUG_1_MG))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1109,7 +1127,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: %s >= #1.0", DRUG_ROOT, PREFERRED_STRENGTH));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(AMOXICILLIN_TABLET, DRUG_1D_MG))
+			ids(Set.of(AMOXICILLIN_TABLET, DRUG_1D_MG))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1122,10 +1140,10 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		
 		indexRevision(MAIN, 
 			concept(member1)
-				.activeMemberOf(ImmutableSet.of(refSetId))
+				.activeMemberOf(Set.of(refSetId))
 				.build(),
 			concept(member2)
-				.activeMemberOf(ImmutableSet.of(refSetId))
+				.activeMemberOf(Set.of(refSetId))
 				.build()
 		);
 		
@@ -1147,7 +1165,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 	public void defaultGroupCardinalityWithZeroToZeroAttributeCardinalityNotEquals() throws Exception {
 		generateDrugsWithGroups();
 		final Expression actual = eval(String.format("<%s: { [0..0] %s != %s }", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, INGREDIENT5));
-		final Expression expected = ids(ImmutableSet.of(ASPIRIN_TABLET, TRIPLEX_TABLET, ALGOFLEX_TABLET));
+		final Expression expected = ids(Set.of(ASPIRIN_TABLET, TRIPLEX_TABLET, ALGOFLEX_TABLET));
 		assertEquals(expected, actual);
 	}
 	
@@ -1157,7 +1175,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: { [0..1] %s = <%s }", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = and(
 			descendantsOf(DRUG_ROOT),
-			ids(ImmutableSet.of(ASPIRIN_TABLET, TRIPLEX_TABLET, ALGOFLEX_TABLET))
+			ids(Set.of(ASPIRIN_TABLET, TRIPLEX_TABLET, ALGOFLEX_TABLET))
 		);
 		assertEquals(expected, actual);
 	}
@@ -1168,7 +1186,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [0..0] { %s = <%s }", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = Expressions.builder()
 				.filter(descendantsOf(DRUG_ROOT))
-				.mustNot(ids(ImmutableSet.of(ALGOFLEX_TABLET, TRIPLEX_TABLET, ASPIRIN_TABLET)))
+				.mustNot(ids(Set.of(ALGOFLEX_TABLET, TRIPLEX_TABLET, ASPIRIN_TABLET)))
 				.build();;
 		assertEquals(expected, actual);
 	}
@@ -1179,7 +1197,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 		final Expression actual = eval(String.format("<%s: [0..1] { %s = <%s }", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
 		final Expression expected = Expressions.builder()
 				.filter(descendantsOf(DRUG_ROOT))
-				.mustNot(ids(ImmutableSet.of(ALGOFLEX_TABLET)))
+				.mustNot(ids(Set.of(ALGOFLEX_TABLET)))
 				.build();;
 		assertEquals(expected, actual);
 	}
@@ -1224,10 +1242,399 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 	public void groupCardinalityZeroToOneWithZeroToOneAttributeCardinality() throws Exception {
 		generateDrugsWithGroups();
 		final Expression actual = eval(String.format("<%s: [0..1] { [0..1] %s = <%s }", DRUG_ROOT, HAS_ACTIVE_INGREDIENT, SUBSTANCE));
-		final Expression expected = ids(ImmutableSet.of(ASPIRIN_TABLET, TRIPLEX_TABLET, EPOX_TABLET));
+		final Expression expected = ids(Set.of(ASPIRIN_TABLET, TRIPLEX_TABLET, EPOX_TABLET));
 		assertEquals(expected, actual);
 	}
 	
+	@Test
+	public void filterActiveOnly() throws Exception {
+		final Expression actual = eval("* {{ active=true }}");
+		final Expression expected = SnomedDocument.Expressions.active();
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterInactiveOnly() throws Exception {
+		final Expression actual = eval("* {{ active=false }}");
+		final Expression expected = SnomedDocument.Expressions.inactive();
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterModuleId() throws Exception {
+		final Expression actual = eval("* {{ moduleId= " + Concepts.MODULE_SCT_CORE + " }}");
+		final Expression expected = SnomedDocument.Expressions.modules(List.of(Concepts.MODULE_SCT_CORE));
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterTerm() throws Exception {
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+			.id(generateDescriptionId())
+			.active(true)
+			.moduleId(Concepts.MODULE_SCT_CORE)
+			.term("Clinical finding")
+			.conceptId(Concepts.ROOT_CONCEPT)
+			.typeId(Concepts.SYNONYM)
+			.build());
+		
+		final Expression actual = eval("* {{ term = \"Clin find\" }}");
+		final Expression expected = SnomedDocument.Expressions.ids(List.of(Concepts.ROOT_CONCEPT));
+		assertEquals(expected, actual);
+	}
+	
+	@Test(expected = BadRequestException.class)
+	public void filterTermLessThanTwoChars() throws Exception {
+		eval("* {{ term = \"C\" }}");
+	}
+	
+	@Test
+	public void filterConjunctionActiveAndModuleId() throws Exception {
+		final Expression actual = eval("* {{ active = true, moduleId = " + Concepts.MODULE_SCT_CORE + " }}");
+		final Expression expected = Expressions.builder()
+			.filter(SnomedDocument.Expressions.active())
+			.filter(SnomedDocument.Expressions.modules(List.of(Concepts.MODULE_SCT_CORE)))
+			.build();
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterDisjunctionActiveAndModuleId() throws Exception {
+		final Expression actual = eval("* {{ active = true OR moduleId = " + Concepts.MODULE_SCT_CORE + " }}");
+		final Expression expected = Expressions.builder()
+			.should(SnomedDocument.Expressions.active())
+			.should(SnomedDocument.Expressions.modules(List.of(Concepts.MODULE_SCT_CORE)))
+			.build();
+		assertEquals(expected, actual);
+	}
+	
+	@Test(expected = BadRequestException.class)
+	public void filterConjunctionDomainInconsistency() throws Exception {
+		eval("* {{ active=true AND Description.moduleId = "+ Concepts.MODULE_SCT_CORE +" }}");
+	}
+	
+	@Test(expected = BadRequestException.class)
+	public void filterDisjunctionDomainInconsistency() throws Exception {
+		eval("* {{ Description.active=true OR moduleId = "+ Concepts.MODULE_SCT_CORE +" }}");
+	}
+	
+	@Test
+	public void filterDescriptionType() throws Exception {
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+			.id(generateDescriptionId())
+			.active(true)
+			.moduleId(Concepts.MODULE_SCT_CORE)
+			.term("Clinical finding")
+			.conceptId(Concepts.ROOT_CONCEPT)
+			.typeId(Concepts.TEXT_DEFINITION)
+			.build());
+		
+		final Expression actual = eval("* {{ typeId = " + Concepts.TEXT_DEFINITION + " }}");
+		final Expression expected = SnomedDocument.Expressions.ids(List.of(Concepts.ROOT_CONCEPT));
+		assertEquals(expected, actual);
+	}
+	
+	@Test(expected = BadRequestException.class)
+	public void filterConjunctionAmbiguity() throws Exception {
+		eval("* {{ Description.active=true AND Description.moduleId = " + Concepts.MODULE_SCT_CORE + " OR term=\"clinical finding\" }}");
+	}
+	
+	@Test(expected = BadRequestException.class)
+	public void filterDisjunctionAmbiguity() throws Exception {
+		eval("* {{ Description.active=true OR Description.moduleId = " + Concepts.MODULE_SCT_CORE + " AND term=\"clinical finding\" }}");
+	}
+	
+	@Test(expected = BadRequestException.class)
+	public void filterExclusionAmbiguity() throws Exception {
+		eval("* {{ Description.active=true OR Description.moduleId = " + Concepts.MODULE_SCT_CORE +" MINUS term=\"clinical finding\" }}");
+	}
+	
+	@Test
+	public void filterMultiDomainQueryAnd() throws Exception {
+		Expression actual = eval("* {{ active=false }} AND * {{ term=\"clin find\" }}");
+		Expression expected = Expressions.builder()
+			.filter(SnomedDocument.Expressions.inactive())
+			.filter(SnomedDocument.Expressions.ids(Collections.emptySet()))
+			.build();
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterMultiDomainQueryOr() throws Exception {
+		Expression actual = eval("* {{ active=false }} OR * {{ term=\"clin find\" }}");
+		Expression expected = Expressions.builder()
+			.should(SnomedDocument.Expressions.inactive())
+			.should(SnomedDocument.Expressions.ids(Collections.emptySet()))
+			.build();
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterMultiDomainQueryExclusion() throws Exception {
+		Expression actual = eval("* {{ active=false }} MINUS * {{ term=\"clin find\" }}");
+		Expression expected = Expressions.builder()
+			.filter(SnomedDocument.Expressions.inactive())
+			.mustNot(SnomedDocument.Expressions.ids(Collections.emptySet()))
+			.build();
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterPreferredIn() throws Exception {
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+			.id(generateDescriptionId())
+			.active(true)
+			.moduleId(Concepts.MODULE_SCT_CORE)
+			.term("Clinical finding")
+			.conceptId(Concepts.ROOT_CONCEPT)
+			.typeId(Concepts.TEXT_DEFINITION)
+			.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+			.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+			.build());
+		
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+			.id(generateDescriptionId())
+			.active(true)
+			.moduleId(Concepts.MODULE_SCT_CORE)
+			.term("Clinical finding")
+			.conceptId(Concepts.SUBSTANCE)
+			.typeId(Concepts.TEXT_DEFINITION)
+			.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+			.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+			.build());
+		
+		final Expression actual = eval("* {{ preferredIn = " + Concepts.REFSET_LANGUAGE_TYPE_UK + " }}");
+		final Expression expected = SnomedDocument.Expressions.ids(List.of(Concepts.ROOT_CONCEPT));
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterAcceptableIn() throws Exception {
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+			.id(generateDescriptionId())
+			.active(true)
+			.moduleId(Concepts.MODULE_SCT_CORE)
+			.term("Clinical finding")
+			.conceptId(Concepts.ROOT_CONCEPT)
+			.typeId(Concepts.TEXT_DEFINITION)
+			.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+			.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+			.build());
+		
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+			.id(generateDescriptionId())
+			.active(true)
+			.moduleId(Concepts.MODULE_SCT_CORE)
+			.term("Clinical finding")
+			.conceptId(Concepts.SUBSTANCE)
+			.typeId(Concepts.TEXT_DEFINITION)
+			.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+			.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+			.build());
+		
+		final Expression actual = eval("* {{ acceptableIn = " + Concepts.REFSET_LANGUAGE_TYPE_UK + " }}");
+		final Expression expected = SnomedDocument.Expressions.ids(List.of(Concepts.SUBSTANCE));
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterLanguageRefSet() throws Exception {
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+				.id(generateDescriptionId())
+				.active(true)
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.term("Clinical finding")
+				.conceptId(Concepts.ROOT_CONCEPT)
+				.typeId(Concepts.TEXT_DEFINITION)
+				.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+				.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+				.build());
+		
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+				.id(generateDescriptionId())
+				.active(true)
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.term("Clinical finding")
+				.conceptId(Concepts.SUBSTANCE)
+				.typeId(Concepts.TEXT_DEFINITION)
+				.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+				.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+				.build());
+		
+		final Expression actual = eval("* {{ languageRefSetId = " + Concepts.REFSET_LANGUAGE_TYPE_UK + " }}");
+		final Expression expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT, Concepts.SUBSTANCE));
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterSemanticTag() throws Exception {
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+				.id(generateDescriptionId())
+				.active(true)
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.term("Clinical finding (finding)")
+				.conceptId(Concepts.ROOT_CONCEPT)
+				.typeId(Concepts.TEXT_DEFINITION)
+				.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+				.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+				.build());
+		
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+				.id(generateDescriptionId())
+				.active(true)
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.term("Clinical finding (clinical)")
+				.conceptId(Concepts.SUBSTANCE)
+				.typeId(Concepts.TEXT_DEFINITION)
+				.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+				.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+				.build());
+		
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+				.id(generateDescriptionId())
+				.active(true)
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.term("Clinical finding (disorder)")
+				.conceptId(Concepts.ATTRIBUTE)
+				.typeId(Concepts.TEXT_DEFINITION)
+				.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+				.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+				.build());
+		
+		
+		Expression expected = SnomedDocument.Expressions.ids(Set.of(Concepts.SUBSTANCE));
+		Expression actual = eval("* {{ semanticTag = \"clinical\" }}");
+		assertEquals(expected, actual);
+		
+		expected = SnomedDocument.Expressions.ids(Set.of(Concepts.SUBSTANCE, Concepts.ATTRIBUTE));
+		actual = eval("* {{ semanticTag != \"finding\" }}");
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterDescriptionEffectiveTime() throws Exception {
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+				.id(generateDescriptionId())
+				.active(true)
+				.released(true)
+				.effectiveTime(EffectiveTimes.getEffectiveTime("20210731", DateFormats.SHORT))
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.term("Clinical finding (finding)")
+				.conceptId(Concepts.ROOT_CONCEPT)
+				.typeId(Concepts.TEXT_DEFINITION)
+				.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+				.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+				.build());
+		
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+				.id(generateDescriptionId())
+				.active(true)
+				.released(true)
+				.effectiveTime(EffectiveTimes.getEffectiveTime("20020131", DateFormats.SHORT))
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.term("Clinical finding (clinical)")
+				.conceptId(Concepts.SUBSTANCE)
+				.typeId(Concepts.TEXT_DEFINITION)
+				.preferredIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_US))
+				.acceptableIn(Set.of(Concepts.REFSET_LANGUAGE_TYPE_UK))
+				.build());
+		
+		Expression expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT));
+		Expression actual = eval("* {{ Description.effectiveTime = \"20210731\" }}");
+		assertEquals(expected, actual);
+
+		expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT));
+		actual = eval("* {{ Description.effectiveTime > \"20210605\" }}");
+		assertEquals(expected, actual);
+
+		expected = SnomedDocument.Expressions.ids(Set.of(Concepts.SUBSTANCE));
+		actual = eval("* {{ Description.effectiveTime < \"20020201\" }}");
+		assertEquals(expected, actual);
+		
+		expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT, Concepts.SUBSTANCE));
+		actual = eval("* {{ Description.effectiveTime >= \"20020131\" }}");
+		assertEquals(expected, actual);
+		
+		expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT, Concepts.SUBSTANCE));
+		actual = eval("* {{ Description.effectiveTime >= \"20010731\" }}");
+		assertEquals(expected, actual);
+		
+		expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT, Concepts.SUBSTANCE));
+		actual = eval("* {{ Description.effectiveTime <= \"20210731\" }}");
+		assertEquals(expected, actual);
+		
+		expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT, Concepts.SUBSTANCE));
+		actual = eval("* {{ Description.effectiveTime <= \"20211030\" }}");
+		assertEquals(expected, actual);
+		
+		expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT, Concepts.SUBSTANCE));
+		actual = eval("* {{ Description.effectiveTime != \"20211030\" }}");
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterConceptEffectiveTime() throws Exception {
+		indexRevision(MAIN, SnomedConceptDocument.builder()
+				.id(Concepts.FINDING_SITE)
+				.active(true)
+				.released(true)
+				.effectiveTime(EffectiveTimes.getEffectiveTime("20210731", DateFormats.SHORT))
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.build());
+		
+		indexRevision(MAIN, SnomedConceptDocument.builder()
+				.id(Concepts.HAS_ACTIVE_INGREDIENT)
+				.active(true)
+				.released(true)
+				.effectiveTime(EffectiveTimes.getEffectiveTime("20020131", DateFormats.SHORT))
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.build());
+		
+		Expression expected = SnomedDocument.Expressions.effectiveTime(EffectiveTimes.getEffectiveTime("20210731", DateFormats.SHORT));
+		Expression actual = eval("* {{ effectiveTime = \"20210731\" }}");
+		assertEquals(expected, actual);
+	}
+	
+	@Test(expected = BadRequestException.class)
+	public void filterInvalidLanguageCode() throws Exception {
+		eval("* {{ language = \"en-sg\" }}");
+	}
+	
+	@Test
+	public void filterLanguageCode() throws Exception {
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+				.id(generateDescriptionId())
+				.active(true)
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.term("Clinical finding")
+				.conceptId(Concepts.ROOT_CONCEPT)
+				.typeId(Concepts.TEXT_DEFINITION)
+				.languageCode("en")
+				.build());
+		
+		Expression actual = eval("* {{ language = en }}");
+		Expression expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT));
+		assertEquals(expected, actual);
+	}
+	
+	@Test
+	public void filterCaseSignificanceId() throws Exception {
+		indexRevision(MAIN, SnomedDescriptionIndexEntry.builder()
+				.id(generateDescriptionId())
+				.active(true)
+				.moduleId(Concepts.MODULE_SCT_CORE)
+				.term("Clinical finding")
+				.conceptId(Concepts.ROOT_CONCEPT)
+				.typeId(Concepts.TEXT_DEFINITION)
+				.languageCode("en")
+				.caseSignificanceId(Concepts.ENTIRE_TERM_CASE_INSENSITIVE)
+				.build());
+		
+		Expression actual = eval("* {{ caseSignificanceId = " + Concepts.ENTIRE_TERM_CASE_INSENSITIVE + " }}");
+		Expression expected = SnomedDocument.Expressions.ids(Set.of(Concepts.ROOT_CONCEPT));
+		assertEquals(expected, actual);
+	}
+
 	/**
 	 * Generates the following test fixtures:
 	 * <ul>
@@ -1293,15 +1700,15 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 			).build());
 		} else {
 			staging
-				.stageNew(relationship(PANADOL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT1, getCharacteristicType()).group(0).build())
-				.stageNew(relationship(TRIPHASIL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT1, getCharacteristicType()).group(0).build())
-				.stageNew(relationship(TRIPHASIL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT2, getCharacteristicType()).group(0).build())
-				.stageNew(relationship(TRIPHASIL_TABLET, HAS_BOSS, INGREDIENT2, getCharacteristicType()).group(0).build());
+				.stageNew(relationship(PANADOL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT1, getCharacteristicType()).relationshipGroup(0).build())
+				.stageNew(relationship(TRIPHASIL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT1, getCharacteristicType()).relationshipGroup(0).build())
+				.stageNew(relationship(TRIPHASIL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT2, getCharacteristicType()).relationshipGroup(0).build())
+				.stageNew(relationship(TRIPHASIL_TABLET, HAS_BOSS, INGREDIENT2, getCharacteristicType()).relationshipGroup(0).build());
 		}
 		
 		// XXX: This relationship's characteristicType setting is here for a reason so in ecl searches we won't find this
 		staging.stageNew(relationship(AMOXICILLIN_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT1, getCharacteristicType())
-				.group(0)
+				.relationshipGroup(0)
 				.characteristicTypeId(isInferred() ? Concepts.STATED_RELATIONSHIP : Concepts.INFERRED_RELATIONSHIP) // inverse!
 				.build());
 		
@@ -1427,16 +1834,16 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 			).build());
 		} else {
 			staging
-				.stageNew(relationship(PANADOL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT1, getCharacteristicType()).group(1).build())
-				.stageNew(relationship(PANADOL_TABLET, HAS_BOSS, INGREDIENT2, getCharacteristicType()).group(1).build())
-				.stageNew(relationship(PANADOL_TABLET, HAS_TRADE_NAME, INGREDIENT2, getCharacteristicType()).group(1).build())
-				.stageNew(relationship(ABACAVIR_TABLET, HAS_BOSS, INGREDIENT1, getCharacteristicType()).group(1).build())
-				.stageNew(relationship(ABACAVIR_TABLET, HAS_TRADE_NAME, INGREDIENT1, getCharacteristicType()).group(1).build());
+				.stageNew(relationship(PANADOL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT1, getCharacteristicType()).relationshipGroup(1).build())
+				.stageNew(relationship(PANADOL_TABLET, HAS_BOSS, INGREDIENT2, getCharacteristicType()).relationshipGroup(1).build())
+				.stageNew(relationship(PANADOL_TABLET, HAS_TRADE_NAME, INGREDIENT2, getCharacteristicType()).relationshipGroup(1).build())
+				.stageNew(relationship(ABACAVIR_TABLET, HAS_BOSS, INGREDIENT1, getCharacteristicType()).relationshipGroup(1).build())
+				.stageNew(relationship(ABACAVIR_TABLET, HAS_TRADE_NAME, INGREDIENT1, getCharacteristicType()).relationshipGroup(1).build());
 			
 			staging
-				.stageNew(relationship(TRIPHASIL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT2, getCharacteristicType()).group(2).build())
-				.stageNew(relationship(TRIPHASIL_TABLET, HAS_BOSS, INGREDIENT2, getCharacteristicType()).group(2).build())
-				.stageNew(relationship(TRIPHASIL_TABLET, HAS_TRADE_NAME, INGREDIENT2, getCharacteristicType()).group(1).build());
+				.stageNew(relationship(TRIPHASIL_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT2, getCharacteristicType()).relationshipGroup(2).build())
+				.stageNew(relationship(TRIPHASIL_TABLET, HAS_BOSS, INGREDIENT2, getCharacteristicType()).relationshipGroup(2).build())
+				.stageNew(relationship(TRIPHASIL_TABLET, HAS_TRADE_NAME, INGREDIENT2, getCharacteristicType()).relationshipGroup(1).build());
 		}
 		
 		staging.commit(currentTime(), "test", "Generate hierarchy");
@@ -1473,7 +1880,7 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 				HAS_ACTIVE_INGREDIENT, INGREDIENT4, 0
 			).build());
 		} else {
-			staging.stageNew(relationship(TISSEL_KIT, HAS_ACTIVE_INGREDIENT, INGREDIENT4, getCharacteristicType()).group(0).build());
+			staging.stageNew(relationship(TISSEL_KIT, HAS_ACTIVE_INGREDIENT, INGREDIENT4, getCharacteristicType()).relationshipGroup(0).build());
 		}
 		
 		staging.commit(currentTime(), "test", "Generate TISSEL Kit");
@@ -1549,18 +1956,18 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 				.build());
 		} else {
 			staging
-				.stageNew(relationship(EPOX_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT5, getCharacteristicType()).group(0).build())
+				.stageNew(relationship(EPOX_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT5, getCharacteristicType()).relationshipGroup(0).build())
 			
-				.stageNew(relationship(ASPIRIN_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT5, getCharacteristicType()).group(1).build())
-				.stageNew(relationship(ASPIRIN_TABLET, HAS_BOSS, INGREDIENT6, getCharacteristicType()).group(1).build())
+				.stageNew(relationship(ASPIRIN_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT5, getCharacteristicType()).relationshipGroup(1).build())
+				.stageNew(relationship(ASPIRIN_TABLET, HAS_BOSS, INGREDIENT6, getCharacteristicType()).relationshipGroup(1).build())
 				
-				.stageNew(relationship(ALGOFLEX_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT5, getCharacteristicType()).group(1).build())
-				.stageNew(relationship(ALGOFLEX_TABLET, HAS_BOSS, INGREDIENT6, getCharacteristicType()).group(1).build())
-				.stageNew(relationship(ALGOFLEX_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT6, getCharacteristicType()).group(2).build())
-				.stageNew(relationship(ALGOFLEX_TABLET, HAS_BOSS, INGREDIENT5, getCharacteristicType()).group(2).build())
+				.stageNew(relationship(ALGOFLEX_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT5, getCharacteristicType()).relationshipGroup(1).build())
+				.stageNew(relationship(ALGOFLEX_TABLET, HAS_BOSS, INGREDIENT6, getCharacteristicType()).relationshipGroup(1).build())
+				.stageNew(relationship(ALGOFLEX_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT6, getCharacteristicType()).relationshipGroup(2).build())
+				.stageNew(relationship(ALGOFLEX_TABLET, HAS_BOSS, INGREDIENT5, getCharacteristicType()).relationshipGroup(2).build())
 				
-				.stageNew(relationship(TRIPLEX_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT5, getCharacteristicType()).group(1).build())
-				.stageNew(relationship(TRIPLEX_TABLET, HAS_BOSS, INGREDIENT6, getCharacteristicType()).group(2).build());
+				.stageNew(relationship(TRIPLEX_TABLET, HAS_ACTIVE_INGREDIENT, INGREDIENT5, getCharacteristicType()).relationshipGroup(1).build())
+				.stageNew(relationship(TRIPLEX_TABLET, HAS_BOSS, INGREDIENT6, getCharacteristicType()).relationshipGroup(2).build());
 		}
 			
 		staging.commit(currentTime(), UUID.randomUUID().toString(), "Initialize Drugs with groups");
@@ -1599,13 +2006,13 @@ public class SnomedEclEvaluationRequestTest extends BaseRevisionIndexTest {
 	private Expression descendantsOf(String...conceptIds) {
 		if (isInferred()) {
 			return Expressions.builder()
-					.should(parents(ImmutableSet.copyOf(conceptIds)))
-					.should(ancestors(ImmutableSet.copyOf(conceptIds)))
+					.should(parents(Set.of(conceptIds)))
+					.should(ancestors(Set.of(conceptIds)))
 					.build();
 		} else {
 			return Expressions.builder()
-					.should(statedParents(ImmutableSet.copyOf(conceptIds)))
-					.should(statedAncestors(ImmutableSet.copyOf(conceptIds)))
+					.should(statedParents(Set.of(conceptIds)))
+					.should(statedAncestors(Set.of(conceptIds)))
 					.build();
 		}
 	}
